microservices-stephen-grider/mini-microservices-app/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  # number of pods we want to create
  replicas: 1
  selector:
    # which pods this should manage, after master created them
    matchLabels:
      # find all the client with label app:client
      app: client
  template:
    # configuration of pods to create
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: ugulzar4512/mini-client:latest
# push the image to docker hub then run:
# "kubectl rollout restart deployment client-depl"
# now whenever we will run the upper command, k8s will go to the docker hub and find the latest image there
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  # optional: if we didn't specify any type, k8s will automatically create ClusterIP
  type: ClusterIP
  ports:
    - name: client
      protocol: TCP
      # ClusterIP itself has a port
      port: 3000
      # container port
      targetPort: 3000
