microservices-stephen-grider/mini-microservices-app/infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  # number of pods we want to create
  replicas: 1
  selector:
    # which pods this should manage, after master created them
    matchLabels:
      # find all the comments with label app:comments
      app: comments
  template:
    # configuration of pods to create
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: ugulzar4512/mini-comments:latest
# push the image to docker hub then run:
# "kubectl rollout restart deployment comments-depl"
# now whenever we will run the upper command, k8s will go to the docker hub and find the latest image there
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  # optional: if we didn't specify any type, k8s will automatically create ClusterIP
  type: ClusterIP
  ports:
    - name: comments
      protocol: TCP
      # ClusterIP itself has a port
      port: 4001
      # container port
      targetPort: 4001
