microservices-stephen-grider/mini-microservices-app/infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  # number of pods we want to create
  replicas: 1
  selector:
    # which pods this should manage, after master created them
    matchLabels:
      # find all the moderation with label app:moderation
      app: moderation
  template:
    # configuration of pods to create
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: ugulzar4512/mini-moderation:latest
# push the image to docker hub then run:
# "kubectl rollout restart deployment moderation-depl"
# now whenever we will run the upper command, k8s will go to the docker hub and find the latest image there
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  # optional: if we didn't specify any type, k8s will automatically create ClusterIP
  type: ClusterIP
  ports:
    - name: moderation
      protocol: TCP
      # ClusterIP itself has a port
      port: 4003
      # container port
      targetPort: 4003
