microservices-stephen-grider/mini-microservices-app/infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  # number of pods we want to create
  replicas: 1
  selector:
    # which pods this should manage, after master created them
    matchLabels:
      # find all the query with label app:query
      app: query
  template:
    # configuration of pods to create
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: ugulzar4512/mini-query:latest
# push the image to docker hub then run:
# "kubectl rollout restart deployment query-depl"
# now whenever we will run the upper command, k8s will go to the docker hub and find the latest image there
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  # optional: if we didn't specify any type, k8s will automatically create ClusterIP
  type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      # ClusterIP itself has a port
      port: 4002
      # container port
      targetPort: 4002
